<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProblemPresentationActivity" >

    <TextView
        android:id="@+id/problemDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/problemExampleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/problemInputOneDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/problemInputOneEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/positive_default" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/problemInputTwoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/problemInputTwoEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/positive_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/problemInputThreeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/problemInputThreeEditText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="@string/positive_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_buffer"
            android:onClick="startCalculation"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_buffer"
            android:text="@string/answer_intro"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/problemSolutionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solution_string"
        android:onClick = "showSolution" />

</LinearLayout>